{
  "version": 4,
  "terraform_version": "1.10.5",
  "serial": 59,
  "lineage": "29055628-883c-aaf5-70d5-d7c437a803c2",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "bhuvan_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:145023132560:internet-gateway/igw-0f611aadd4fe8d0e6",
            "id": "igw-0f611aadd4fe8d0e6",
            "owner_id": "145023132560",
            "region": "ca-central-1",
            "tags": {
              "Name": "bhuvan-igw"
            },
            "tags_all": {
              "Name": "bhuvan-igw"
            },
            "vpc_id": "vpc-0d0d2800db21e7aa4"
          },
          "dependencies": [
            "aws_vpc.bhuvan_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "bhuvan_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:145023132560:route-table/rtb-054d3f5d246b2b38d",
            "id": "rtb-054d3f5d246b2b38d",
            "owner_id": "145023132560",
            "propagating_vgws": [],
            "region": "ca-central-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f611aadd4fe8d0e6",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "bhuvan-route-table"
            },
            "tags_all": {
              "Name": "bhuvan-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d0d2800db21e7aa4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.bhuvan_igw",
            "aws_vpc.bhuvan_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08e37d9463b41b0c6",
            "region": "ca-central-1",
            "route_table_id": "rtb-054d3f5d246b2b38d",
            "subnet_id": "subnet-07f0ce70abe61704e"
          },
          "dependencies": [
            "aws_internet_gateway.bhuvan_igw",
            "aws_route_table.bhuvan_route_table",
            "aws_subnet.bhuvan_subnet",
            "aws_vpc.bhuvan_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07f40872936e40a27",
            "region": "ca-central-1",
            "route_table_id": "rtb-054d3f5d246b2b38d",
            "subnet_id": "subnet-0b1e00d02b03adda9"
          },
          "dependencies": [
            "aws_internet_gateway.bhuvan_igw",
            "aws_route_table.bhuvan_route_table",
            "aws_subnet.bhuvan_subnet",
            "aws_vpc.bhuvan_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bhuvan_cluster_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:145023132560:security-group/sg-00dee0069dbef3fca",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00dee0069dbef3fca",
            "ingress": [],
            "name": "terraform-20250728221715153100000001",
            "name_prefix": "terraform-",
            "owner_id": "145023132560",
            "region": "ca-central-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "bhuvan-cluster-sg"
            },
            "tags_all": {
              "Name": "bhuvan-cluster-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d0d2800db21e7aa4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.bhuvan_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bhuvan_node_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:145023132560:security-group/sg-06d2f39c3cf3e6246",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06d2f39c3cf3e6246",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "terraform-20250728221715153600000002",
            "name_prefix": "terraform-",
            "owner_id": "145023132560",
            "region": "ca-central-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "bhuvan-node-sg"
            },
            "tags_all": {
              "Name": "bhuvan-node-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d0d2800db21e7aa4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.bhuvan_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "bhuvan_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:145023132560:subnet/subnet-07f0ce70abe61704e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1a",
            "availability_zone_id": "cac1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07f0ce70abe61704e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "145023132560",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ca-central-1",
            "tags": {
              "Name": "bhuvan-subnet-0"
            },
            "tags_all": {
              "Name": "bhuvan-subnet-0"
            },
            "vpc_id": "vpc-0d0d2800db21e7aa4"
          },
          "dependencies": [
            "aws_vpc.bhuvan_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:145023132560:subnet/subnet-0b1e00d02b03adda9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1b",
            "availability_zone_id": "cac1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b1e00d02b03adda9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "145023132560",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ca-central-1",
            "tags": {
              "Name": "bhuvan-subnet-1"
            },
            "tags_all": {
              "Name": "bhuvan-subnet-1"
            },
            "vpc_id": "vpc-0d0d2800db21e7aa4"
          },
          "dependencies": [
            "aws_vpc.bhuvan_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "bhuvan_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:145023132560:vpc/vpc-0d0d2800db21e7aa4",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0981d2b80f1e0725d",
            "default_route_table_id": "rtb-07ffc5ebaa64a6f54",
            "default_security_group_id": "sg-079967e3c4aade73e",
            "dhcp_options_id": "dopt-031493c77c877cf17",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0d0d2800db21e7aa4",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-07ffc5ebaa64a6f54",
            "owner_id": "145023132560",
            "region": "ca-central-1",
            "tags": {
              "Name": "bhuvan-vpc"
            },
            "tags_all": {
              "Name": "bhuvan-vpc"
            }
          }
        }
      ]
    }
  ]
}